# GraphsFromScratch

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
resources/algorithms/: test.shader
src/: Color.h  FileUtils.cpp  FileUtils.h  Image.cpp  Image.h  Object.h  RaytracingAlgorithm.cpp  RaytracingAlgorithm.h  RenderingAlgorithm.cpp  RenderingAlgorithm.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  ShaderLoader.cpp  ShaderLoader.h  Sphere.cpp  Sphere.h  canvas.cpp  canvas.h  canvas.ui  main.cpp
